# clapgrep

./: .gitignore  .gitmodules  .lazy.lua  CONTRIBUTING.md  Cargo.toml  README.md  justfile  makefile  meson.build  meson_options.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yaml
assets/: de.leopoldluley.Clapgrep.Devel.desktop  de.leopoldluley.Clapgrep.desktop  de.leopoldluley.Clapgrep.desktop.in.in  de.leopoldluley.Clapgrep.metainfo.xml  de.leopoldluley.Clapgrep.metainfo.xml.in.in  meson.build  resources.xml.in
assets/gtk/: meson.build  shortcuts-dialog.blp
assets/integrations/nautilus/: clapgrep.py
assets/resources/: help-overlay.blp  meson.build  resources.xml
build-aux/: Makefile  cargo-sources.json  de.leopoldluley.Clapgrep.CI.json  de.leopoldluley.Clapgrep.Devel.json  de.leopoldluley.Clapgrep.json  fun.sh
clapgrep-core/: Cargo.toml
clapgrep-core/src/: lib.rs
clapgrep-cosmic/: Cargo.toml  de.leopoldluley.Clapgrep.Devel.json  de.leopoldluley.Clapgrep.json  i18n.toml  justfile
clapgrep-cosmic/src/: app.rs  i18n.rs  main.rs
clapgrep-gtk/: Cargo.toml
clapgrep-gtk/src/: main.rs  window.blp
clapgrep-gtk/src/search_match/: mod.rs
clapgrep-gtk/src/search_model/: imp.rs  mod.rs
clapgrep-gtk/src/search_result/: imp.rs  mod.rs
clapgrep-gtk/src/window/: imp.rs  window.blp
clapgrep-i18n/src/: lib.rs
core/: Cargo.toml  README.md
core-next/: Cargo.toml
core-next/src/: engine.rs  lib.rs  result.rs  search.rs
core-next/src/extended/: mod.rs  office.rs
core/src/: engine.rs  extended.rs  lib.rs  manager.rs  options.rs  result.rs  rgtools.rs  search.rs  utils.rs
core/src/extended/: pdf.rs
core/src/extra/: mod.rs  office.rs  pdf.rs
cosmic/: Cargo.toml  i18n.toml
cosmic/src/: app.rs  example.rs  main.rs
gnome/: CONTRIBUTING.md  Cargo.toml  de.leopoldluley.Clapgrep.json  meson.build
gnome/src/: about.rs  app.rs  build.rs.in  color.rs  config.rs  i18n.rs  main.rs  meson.build  search_match.rs  search_model.rs  search_result.rs  shortcuts.rs  styles.css
gnome/src/config/: imp.rs  mod.rs  v1.rs  v2.rs
gnome/src/error_window/: error_window.blp  imp.rs  mod.rs
gnome/src/search/: heading.rs  mod.rs  model.rs  range.rs  result.rs
gnome/src/search_match/: imp.rs
gnome/src/search_model/: imp.rs  mod.rs
gnome/src/search_result/: imp.rs  mod.rs
gnome/src/search_window/: imp.rs  mod.rs  search_window.blp
gnome/src/ui/: about.rs  error_window.blp  error_window.rs  mod.rs  preferences.blp  preferences.rs  preview.rs  result_header_view.blp  result_header_view.rs  result_view.blp  result_view.rs  search_window.blp  search_window.rs
gnome/src/ui/error_window/: error_window.blp  imp.rs  mod.rs
gnome/src/ui/preferences/: imp.rs  mod.rs  preferences.blp
gnome/src/ui/preview/: mod.rs  pdf_preview.blp  pdf_preview.rs  plain_preview.blp  plain_preview.rs  preview.blp  preview.rs  text_preview.blp  text_preview.rs
gnome/src/ui/result_header_view/: imp.rs  mod.rs
gnome/src/ui/result_view/: imp.rs  mod.rs  result_view.blp
gnome/src/ui/search_window/: imp.rs  search_window.blp
gnome/src/ui/shortcuts/: mod.rs  shortcuts.blp
gnome/src/window/: imp.rs  mod.rs  window.blp
i18n/: Cargo.toml  i18n.toml
i18n/en/: clapgrep.ftl
librusl/: Cargo.toml
librusl/src/: extended.rs  fileinfo.rs  manager.rs  options.rs  rgtools.rs  search.rs
locale/: LINGUAS  POTFILES  cs.po  de.leopoldluley.Clapgrep.Devel.pot  de.leopoldluley.Clapgrep.pot  de.po  es.po  fr.po  it.po  meson.build  nl.po  oc.po  ru.po  ta.po  tr.po  uk.po  zh_Hans.po
po/: LINGUAS  POTFILES  clapgrep.pot  cs.po  de.po  it.po  messages.pot  ru.po
res/: app.desktop
src/: app.rs  config.rs  main.rs
