[workspace]
members = ["core", "gnome"]
resolver = "2"

[workspace.dependencies]
flume = "0.11.1"
regex = "1.12"
grep = "0.4"
ignore = "0.4"
gettext-rs = { version = "0.7.7", features = ["gettext-system"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
env_logger = { version = "0.11.8", default-features = false }
anyhow = "1.0.100"
glob = "0.3.3"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
xml = { package = "quick-xml", version = "0.38.3" }

# Anything glib related
[workspace.dependencies.gtk]
version = "0.10.2"
package = "gtk4"
features = ["blueprint", "v4_20"]

[workspace.dependencies.adw]
version = "0.8.0"
package = "libadwaita"
features = ["v1_8"]

[workspace.dependencies.gio]
version = "0.21.4"
features = ["v2_84"]

[workspace.dependencies.sourceview5]
version = "0.10.0"
features = ["gtk_v4_12", "v5_12"]

[workspace.dependencies.poppler-rs]
version = "0.25.0"
