[package]
name = "clapgrep-core"
version = "1.0.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
grep = { workspace = true }
ignore = { workspace = true }
flume = { workspace = true }

# for office support
dotext = { workspace = true }

# for pdf support
poppler-rs = { workspace = true }
gio = { workspace = true }
