[package]
name = "clapgrep-core"
version = "1.0.0"
edition = "2021"

[dependencies]
regex = { workspace = true }
grep = { workspace = true }
ignore = { workspace = true }
flume = { workspace = true }
glob = { workspace = true }
log = { workspace = true }
poppler-rs = { workspace = true }
gio = { workspace = true }
xml = { workspace = true }
zip = { workspace = true }
anyhow = { workspace = true }
