[package]
name = "clapgrep-cosmic"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
open = "5.1.3"
tokio = { version = "1.37.0", features = ["full"] }
clapgrep-core = { path = "../core" }
clapgrep-i18n = { path = "../i18n" }
i18n-embed = { workspace = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["dbus-config", "tokio", "winit", "wgpu"]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
