[package]
name = "clapgrep-gnome"
version = "1.0.0"
edition = "2021"

[dependencies]
clapgrep-core = { path = "../core" }
adw = { version = "0.7.0", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9.2", package = "gtk4", features = ["blueprint", "v4_16"] }
flume = "0.11.0"
gettext-rs = { version = "0.7.1", features = ["gettext-system"] }
gtk-blueprint = "0.2.0"
sourceview5 = { version = "0.9.1", features = ["gtk_v4_12", "v5_12"] }
toml = "0.8.19"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"
env_logger = { version = "0.11.6", default-features = false }
anyhow = "1.0.95"
