[package]
name = "clapgrep-gnome"
version = "1.0.0"
edition = "2021"

[dependencies]
clapgrep-core = { path = "../core" }
adw = { workspace = true }
gtk = { workspace = true }
poppler-rs = { workspace = true }
flume = { workspace = true }
gettext-rs = { workspace = true }
sourceview5 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
